project/logs/EngineLog_2026-05-13_15-06-47.txt
[2026-05-13 15:06:47] [Log] Application Start
[2026-05-13 15:06:47] [Log] Game Initialize
[2026-05-13 15:06:47] [Log] Game Initialize Start
[2026-05-13 15:06:47] [Log] Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

[2026-05-13 15:06:47] [Log] FeatureLevel : 12.2

[2026-05-13 15:06:47] [Log] Complete create D3D12Device!!!

[2026-05-13 15:06:47] [Log] Begin CompileShader,path:resources/shaders/Sprite.VS.hlsl,profike:vs_6_0

[2026-05-13 15:06:47] [Log] Compile Succeeded, path:resources/shaders/Sprite.VS.hlsl, profike:vs_6_0
 
[2026-05-13 15:06:47] [Log] Begin CompileShader,path:resources/shaders/Sprite.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:47] [Log] Compile Succeeded, path:resources/shaders/Sprite.PS.hlsl, profike:ps_6_0
 
[2026-05-13 15:06:47] [Log] Begin CompileShader,path:resources/shaders/Object3d.VS.hlsl,profike:vs_6_0

[2026-05-13 15:06:47] [Log] Compile Succeeded, path:resources/shaders/Object3d.VS.hlsl, profike:vs_6_0
 
[2026-05-13 15:06:47] [Log] Begin CompileShader,path:resources/shaders/Object3d.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Object3d.PS.hlsl, profike:ps_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Glow.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Glow.PS.hlsl, profike:ps_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Object3d.VS.hlsl,profike:vs_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Object3d.VS.hlsl, profike:vs_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Object3d.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Object3d.PS.hlsl, profike:ps_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Skinning.CS.hlsl,profike:cs_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Skinning.CS.hlsl, profike:cs_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Skybox.VS.hlsl,profike:vs_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Skybox.VS.hlsl, profike:vs_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Skybox.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Skybox.PS.hlsl, profike:ps_6_0
 
[2026-05-13 15:06:48] [Log] Load Default Models
[2026-05-13 15:06:48] [Log] Texture Loaded: resources\uvChecker.png, SRV Index: 1
[2026-05-13 15:06:48] [Log] srvIndex = 1
[2026-05-13 15:06:48] [Log] Texture Loaded: resources\fence.png, SRV Index: 2
[2026-05-13 15:06:48] [Log] srvIndex = 2
[2026-05-13 15:06:48] [Log] Load Default Textures
[2026-05-13 15:06:48] [Log] Texture Loaded: resources/white.png, SRV Index: 3
[2026-05-13 15:06:48] [Log] srvIndex = 3
[2026-05-13 15:06:48] [Log] Texture Loaded: resources/uvChecker.png, SRV Index: 4
[2026-05-13 15:06:48] [Log] srvIndex = 4
[2026-05-13 15:06:48] [Log] Texture Loaded: resources/fence.png, SRV Index: 5
[2026-05-13 15:06:48] [Log] srvIndex = 5
[2026-05-13 15:06:48] [Log] Texture Loaded: resources/BaseColor_Cube.png, SRV Index: 6
[2026-05-13 15:06:48] [Log] srvIndex = 6
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Fullscreen.VS.hlsl,profike:vs_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Fullscreen.VS.hlsl, profike:vs_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Fullscreen.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Fullscreen.PS.hlsl, profike:ps_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Fullscreen.VS.hlsl,profike:vs_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Fullscreen.VS.hlsl, profike:vs_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/GrayScale.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/GrayScale.PS.hlsl, profike:ps_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Fullscreen.VS.hlsl,profike:vs_6_0

[2026-05-13 15:06:48] [Log] Compile Succeeded, path:resources/shaders/Fullscreen.VS.hlsl, profike:vs_6_0
 
[2026-05-13 15:06:48] [Log] Begin CompileShader,path:resources/shaders/Vignette.PS.hlsl,profike:ps_6_0

[2026-05-13 15:06:48] [Log] resources/shaders/Vignette.PS.hlsl:10:5: error: unknown type name 'float3x2_t2'; did you mean 'float32_t2'?
    float3x2_t2 correct = input.texcoord * (1.0f - input.texcoord.yx);
    ^~~~~~~~~~~
    float32_t2
note: 'float32_t2' declared here
resources/shaders/Vignette.PS.hlsl:16:5: error: use of undeclared identifier 'outpu6tColor'; did you mean 'outputColor'?
    outpu6tColor.rgb *= vignette;
    ^~~~~~~~~~~~
    outputColor
resources/shaders/Vignette.PS.hlsl:8:12: note: 'outputColor' declared here
    float4 outputColor = gTexture.Sample(gSampler, input.texcoord);
           ^

